// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioGroup default match 1`] = `
<Component>
  <ThemeProvider
    theme={
      Object {
        "colors": Object {
          "aqua100": "#e4fafd",
          "aqua200": "#cbf3fc",
          "aqua400": "#98d5f1",
          "aqua500": "#76bde8",
          "aqua600": "#5695c7",
          "aqua700": "#3b71a7",
          "aqua900": "#16386f",
          "black": "#262B34",
          "blackLight": "#5f656b",
          "blackberry": "#2e2d4c",
          "blackberryDark": "#24243C",
          "blue100": "#d3e3fe",
          "blue200": "#a7c5fe",
          "blue400": "#5a89fd",
          "blue500": "#245dfd",
          "blue600": "#1a47d9",
          "blue700": "#1234b6",
          "blue900": "#061879",
          "disabledGrey": "#ced4d9",
          "green": "#86AD20",
          "green100": "#f4fad2",
          "green200": "#e7f6a6",
          "green400": "#aecd50",
          "green500": "#86ad20",
          "green600": "#6e9417",
          "green700": "#237c10",
          "green900": "#345306",
          "greenLight": "#e7f1d5",
          "grey": "#697782",
          "greyLight": "#f0f3f5",
          "greySoft": "#788590",
          "lines": "#dce3eb",
          "link": "#216db3",
          "linkDark": "#174a79",
          "neutral100": "#f9f9fa",
          "neutral200": "#f4f5f6",
          "neutral300": "#e9ecee",
          "neutral400": "#dfe2e5",
          "neutral500": "#d4d8dc",
          "neutral600": "#a9b1b9",
          "neutral700": "#7d8a96",
          "neutral800": "#526373",
          "neutral900": "#273c50",
          "neutralBase": "#ffffff",
          "orange100": "#fff1cc",
          "orange200": "#ffde99",
          "orange400": "#ffb13f",
          "orange500": "#ff8c00",
          "orange600": "#db6e00",
          "orange700": "#b75400",
          "orange900": "#7a2c00",
          "overlay": "rgba(33,33,33,0.55)",
          "placeholders": "#e1e4e7",
          "placeholdersHover": "#d0d4d8",
          "primary": "#FF8C00",
          "primaryDark": "#C87600",
          "primaryLight": "#fef4e6",
          "primarySoft": "#ff9d26",
          "purple": "#AA5B9C",
          "purple100": "#fae3ed",
          "purple200": "#f6c8e1",
          "purple400": "#cc84b8",
          "purple500": "#aa5b9c",
          "purple600": "#92428b",
          "purple700": "#792d7a",
          "purple900": "#441151",
          "purpleLight": "#EEDEEB",
          "red": "#f04540",
          "red100": "#ffe5d5",
          "red200": "#ffc5ac",
          "red400": "#ff7863",
          "red500": "#ff3b30",
          "red600": "#db2328",
          "red700": "#b7182a",
          "red900": "#7a0929",
          "redDark": "#C43833",
          "redLight": "#FAE7E7",
          "redSoft": "#FF544F",
          "secondary": "#00A8Be",
          "secondaryGrey": "#e4eeff",
          "secondaryLight": "#D6EEF2",
          "secondaryOverlay": "rgba(2,168,189,0.10)",
          "secondarySoft": "#AADFE7",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "tableHeader": "#f6f7f9",
          "tableHeaderHover": "#EBECEF",
          "tableHover": "#FAFBFC",
          "text": Object {
            "black": "#3c4248",
            "danger": "white",
            "default": "#697782",
            "green": "#86AD20",
            "greySoft": "#788590",
            "primary": "white",
            "red": "#f04540",
            "secondary": "#00A8Be",
            "white": "#FFFFFF",
            "yellow": "#E9B200",
          },
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "turquoise100": "#c9fbf1",
          "turquoise200": "#95f8ec",
          "turquoise400": "#36d2d8",
          "turquoise500": "#00a8be",
          "turquoise600": "#0083a3",
          "turquoise700": "#006388",
          "turquoise900": "#00335b",
          "white": "#FFFFFF",
          "yellow": "#E9B200",
          "yellow100": "#fdf6cb",
          "yellow200": "#fcec97",
          "yellow400": "#f1cb3c",
          "yellow500": "#e9b200",
          "yellow600": "#c89400",
          "yellow700": "#a77700",
          "yellow900": "#6f4a00",
          "yellowDark": "#BE9100",
          "yellowLight": "#FCF7E5",
        },
        "effects": Object {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "boxShadow24": Object {
            "boxShadow": "0px 18px 40px rgba(39, 60, 80, 0.4)",
          },
          "buttonActive": Object {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": Object {
          "badges": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 10,
            "fontWeight": 400,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "bigText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "letterSpacing": 0.5,
          },
          "body": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 400,
            "letterSpacing": 0.6,
            "lineHeight": "20px",
          },
          "body1": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0.5,
            "lineHeight": "28px",
          },
          "button": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 0.6,
            "lineHeight": "16px",
          },
          "caption": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 400,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "captionMedium": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 500,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "defaultText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "letterSpacing": 0.5,
          },
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSizeBase": 14,
          "fontSizeSmall": 11,
          "h1": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 96,
            "fontWeight": 300,
            "letterSpacing": -1.5,
            "lineHeight": "112px",
          },
          "h2": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 60,
            "fontWeight": 300,
            "letterSpacing": -0.5,
            "lineHeight": "71px",
          },
          "h3": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 48,
            "fontWeight": 400,
            "lineHeight": "57px",
          },
          "h4": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 34,
            "fontWeight": 400,
            "letterSpacing": 0.25,
            "lineHeight": "40px",
          },
          "h5": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 24,
            "fontWeight": 400,
            "lineHeight": "28px",
          },
          "h6": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "fontWeight": 500,
            "letterSpacing": 0.25,
            "lineHeight": "24px",
          },
          "largeText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "overline": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 500,
            "letterSpacing": 2,
            "lineHeight": "16px",
            "textTransform": "uppercase",
          },
          "smallText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
          "subtitle": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 0.09,
            "lineHeight": "24px",
          },
          "subtitle1": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0.15,
            "lineHeight": "24px",
          },
        },
        "utils": Object {
          "scrollbar": Object {
            "&::-webkit-scrollbar": Object {
              "height": 17,
              "width": 17,
            },
            "&::-webkit-scrollbar-thumb": Object {
              "background": "#dfe2e5",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
            "&::-webkit-scrollbar-thumb:window-inactive": Object {
              "background": "#dfe2e5",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi__"
      generateId={[Function]}
      jss={
        Jss {
          "generateId": [Function],
          "id": 3,
          "options": Object {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "id": Object {
              "minify": false,
            },
            "plugins": Array [],
          },
          "plugins": PluginsRegistry {
            "plugins": Object {
              "external": Array [
                Object {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onProcessRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": Array [
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": Object {
              "onChangeValue": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": Array [],
              "onProcessStyle": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": Array [
                [Function],
              ],
            },
          },
          "version": "10.3.0",
        }
      }
    >
      <RadioGroup
        isReadOnly={false}
        label="Lorem ipsum"
        labelMode="horizontal"
        onChange={[Function]}
        options={
          Array [
            Object {
              "label": "Lorem ipsum",
              "value": "lorem",
            },
            Object {
              "label": "Lorem ipsum 2",
              "value": "lorem2",
            },
            Object {
              "label": "Lorem ipsum 3",
              "value": "lorem3",
            },
          ]
        }
        overrides={Object {}}
        value={null}
      >
        <div
          className="HoiPoi__RadioGroup__root-1-0 HoiPoi__RadioGroup__horizontal-1-8"
        >
          <Label
            className="HoiPoi__RadioGroup__Label-1-1"
          >
            <span
              className="HoiPoi__Label__root-1-9 HoiPoi__RadioGroup__Label-1-1"
            >
              <Text
                className="HoiPoi__Label__Text-1-10"
                overrides={Object {}}
              >
                <span
                  className="HoiPoi__Text__root-1-13 HoiPoi__Label__Text-1-10"
                  style={Object {}}
                >
                  Lorem ipsum
                </span>
              </Text>
            </span>
          </Label>
          <div
            className="HoiPoi__RadioGroup__formControl-1-2"
          >
            <RadioControl
              isReadOnly={false}
              key="lorem"
              onChange={[Function]}
              onClick={[Function]}
              option={
                Object {
                  "label": "Lorem ipsum",
                  "value": "lorem",
                }
              }
              overrides={Object {}}
              value={null}
            >
              <div
                className="HoiPoi__RadioControl__radioControl-1-21"
                onClick={[Function]}
              >
                <Radio
                  checked={false}
                  isDisabled={false}
                  onChange={[Function]}
                  overrides={Object {}}
                >
                  <div
                    className="HoiPoi__Radio__root-1-26"
                    onClick={[Function]}
                  >
                    <Component>
                      <svg
                        height="18"
                        width="18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g
                          fill="none"
                          fillRule="evenodd"
                          stroke="none"
                          strokeWidth="1"
                        >
                          <circle
                            cx="9"
                            cy="9"
                            fill="#FFFFFF"
                            id="Radio-Background"
                            r="7.5"
                            stroke="#788590"
                          />
                          <rect
                            fill="#FF0000"
                            fillOpacity="0.1"
                            height="18"
                            id="Radio-Bounds"
                            opacity="0"
                            width="18"
                            x="0"
                            y="0"
                          />
                        </g>
                      </svg>
                    </Component>
                    <input
                      checked=""
                      className="HoiPoi__Radio__input-1-27"
                      disabled=""
                      onChange={[Function]}
                      type="radio"
                    />
                  </div>
                </Radio>
                <span
                  className="HoiPoi__RadioControl__radioLabel-1-22"
                >
                  Lorem ipsum
                </span>
              </div>
            </RadioControl>
            <RadioControl
              isReadOnly={false}
              key="lorem2"
              onChange={[Function]}
              onClick={[Function]}
              option={
                Object {
                  "label": "Lorem ipsum 2",
                  "value": "lorem2",
                }
              }
              overrides={Object {}}
              value={null}
            >
              <div
                className="HoiPoi__RadioControl__radioControl-1-21"
                onClick={[Function]}
              >
                <Radio
                  checked={false}
                  isDisabled={false}
                  onChange={[Function]}
                  overrides={Object {}}
                >
                  <div
                    className="HoiPoi__Radio__root-1-26"
                    onClick={[Function]}
                  >
                    <Component>
                      <svg
                        height="18"
                        width="18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g
                          fill="none"
                          fillRule="evenodd"
                          stroke="none"
                          strokeWidth="1"
                        >
                          <circle
                            cx="9"
                            cy="9"
                            fill="#FFFFFF"
                            id="Radio-Background"
                            r="7.5"
                            stroke="#788590"
                          />
                          <rect
                            fill="#FF0000"
                            fillOpacity="0.1"
                            height="18"
                            id="Radio-Bounds"
                            opacity="0"
                            width="18"
                            x="0"
                            y="0"
                          />
                        </g>
                      </svg>
                    </Component>
                    <input
                      checked=""
                      className="HoiPoi__Radio__input-1-27"
                      disabled=""
                      onChange={[Function]}
                      type="radio"
                    />
                  </div>
                </Radio>
                <span
                  className="HoiPoi__RadioControl__radioLabel-1-22"
                >
                  Lorem ipsum 2
                </span>
              </div>
            </RadioControl>
            <RadioControl
              isReadOnly={false}
              key="lorem3"
              onChange={[Function]}
              onClick={[Function]}
              option={
                Object {
                  "label": "Lorem ipsum 3",
                  "value": "lorem3",
                }
              }
              overrides={Object {}}
              value={null}
            >
              <div
                className="HoiPoi__RadioControl__radioControl-1-21"
                onClick={[Function]}
              >
                <Radio
                  checked={false}
                  isDisabled={false}
                  onChange={[Function]}
                  overrides={Object {}}
                >
                  <div
                    className="HoiPoi__Radio__root-1-26"
                    onClick={[Function]}
                  >
                    <Component>
                      <svg
                        height="18"
                        width="18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g
                          fill="none"
                          fillRule="evenodd"
                          stroke="none"
                          strokeWidth="1"
                        >
                          <circle
                            cx="9"
                            cy="9"
                            fill="#FFFFFF"
                            id="Radio-Background"
                            r="7.5"
                            stroke="#788590"
                          />
                          <rect
                            fill="#FF0000"
                            fillOpacity="0.1"
                            height="18"
                            id="Radio-Bounds"
                            opacity="0"
                            width="18"
                            x="0"
                            y="0"
                          />
                        </g>
                      </svg>
                    </Component>
                    <input
                      checked=""
                      className="HoiPoi__Radio__input-1-27"
                      disabled=""
                      onChange={[Function]}
                      type="radio"
                    />
                  </div>
                </Radio>
                <span
                  className="HoiPoi__RadioControl__radioLabel-1-22"
                >
                  Lorem ipsum 3
                </span>
              </div>
            </RadioControl>
          </div>
        </div>
      </RadioGroup>
    </JssProvider>
  </ThemeProvider>
</Component>
`;

exports[`RadioGroup disabled match 1`] = `
<Component>
  <ThemeProvider
    theme={
      Object {
        "colors": Object {
          "aqua100": "#e4fafd",
          "aqua200": "#cbf3fc",
          "aqua400": "#98d5f1",
          "aqua500": "#76bde8",
          "aqua600": "#5695c7",
          "aqua700": "#3b71a7",
          "aqua900": "#16386f",
          "black": "#262B34",
          "blackLight": "#5f656b",
          "blackberry": "#2e2d4c",
          "blackberryDark": "#24243C",
          "blue100": "#d3e3fe",
          "blue200": "#a7c5fe",
          "blue400": "#5a89fd",
          "blue500": "#245dfd",
          "blue600": "#1a47d9",
          "blue700": "#1234b6",
          "blue900": "#061879",
          "disabledGrey": "#ced4d9",
          "green": "#86AD20",
          "green100": "#f4fad2",
          "green200": "#e7f6a6",
          "green400": "#aecd50",
          "green500": "#86ad20",
          "green600": "#6e9417",
          "green700": "#237c10",
          "green900": "#345306",
          "greenLight": "#e7f1d5",
          "grey": "#697782",
          "greyLight": "#f0f3f5",
          "greySoft": "#788590",
          "lines": "#dce3eb",
          "link": "#216db3",
          "linkDark": "#174a79",
          "neutral100": "#f9f9fa",
          "neutral200": "#f4f5f6",
          "neutral300": "#e9ecee",
          "neutral400": "#dfe2e5",
          "neutral500": "#d4d8dc",
          "neutral600": "#a9b1b9",
          "neutral700": "#7d8a96",
          "neutral800": "#526373",
          "neutral900": "#273c50",
          "neutralBase": "#ffffff",
          "orange100": "#fff1cc",
          "orange200": "#ffde99",
          "orange400": "#ffb13f",
          "orange500": "#ff8c00",
          "orange600": "#db6e00",
          "orange700": "#b75400",
          "orange900": "#7a2c00",
          "overlay": "rgba(33,33,33,0.55)",
          "placeholders": "#e1e4e7",
          "placeholdersHover": "#d0d4d8",
          "primary": "#FF8C00",
          "primaryDark": "#C87600",
          "primaryLight": "#fef4e6",
          "primarySoft": "#ff9d26",
          "purple": "#AA5B9C",
          "purple100": "#fae3ed",
          "purple200": "#f6c8e1",
          "purple400": "#cc84b8",
          "purple500": "#aa5b9c",
          "purple600": "#92428b",
          "purple700": "#792d7a",
          "purple900": "#441151",
          "purpleLight": "#EEDEEB",
          "red": "#f04540",
          "red100": "#ffe5d5",
          "red200": "#ffc5ac",
          "red400": "#ff7863",
          "red500": "#ff3b30",
          "red600": "#db2328",
          "red700": "#b7182a",
          "red900": "#7a0929",
          "redDark": "#C43833",
          "redLight": "#FAE7E7",
          "redSoft": "#FF544F",
          "secondary": "#00A8Be",
          "secondaryGrey": "#e4eeff",
          "secondaryLight": "#D6EEF2",
          "secondaryOverlay": "rgba(2,168,189,0.10)",
          "secondarySoft": "#AADFE7",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "tableHeader": "#f6f7f9",
          "tableHeaderHover": "#EBECEF",
          "tableHover": "#FAFBFC",
          "text": Object {
            "black": "#3c4248",
            "danger": "white",
            "default": "#697782",
            "green": "#86AD20",
            "greySoft": "#788590",
            "primary": "white",
            "red": "#f04540",
            "secondary": "#00A8Be",
            "white": "#FFFFFF",
            "yellow": "#E9B200",
          },
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "turquoise100": "#c9fbf1",
          "turquoise200": "#95f8ec",
          "turquoise400": "#36d2d8",
          "turquoise500": "#00a8be",
          "turquoise600": "#0083a3",
          "turquoise700": "#006388",
          "turquoise900": "#00335b",
          "white": "#FFFFFF",
          "yellow": "#E9B200",
          "yellow100": "#fdf6cb",
          "yellow200": "#fcec97",
          "yellow400": "#f1cb3c",
          "yellow500": "#e9b200",
          "yellow600": "#c89400",
          "yellow700": "#a77700",
          "yellow900": "#6f4a00",
          "yellowDark": "#BE9100",
          "yellowLight": "#FCF7E5",
        },
        "effects": Object {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "boxShadow24": Object {
            "boxShadow": "0px 18px 40px rgba(39, 60, 80, 0.4)",
          },
          "buttonActive": Object {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": Object {
          "badges": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 10,
            "fontWeight": 400,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "bigText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "letterSpacing": 0.5,
          },
          "body": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 400,
            "letterSpacing": 0.6,
            "lineHeight": "20px",
          },
          "body1": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0.5,
            "lineHeight": "28px",
          },
          "button": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 0.6,
            "lineHeight": "16px",
          },
          "caption": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 400,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "captionMedium": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 500,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "defaultText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "letterSpacing": 0.5,
          },
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSizeBase": 14,
          "fontSizeSmall": 11,
          "h1": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 96,
            "fontWeight": 300,
            "letterSpacing": -1.5,
            "lineHeight": "112px",
          },
          "h2": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 60,
            "fontWeight": 300,
            "letterSpacing": -0.5,
            "lineHeight": "71px",
          },
          "h3": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 48,
            "fontWeight": 400,
            "lineHeight": "57px",
          },
          "h4": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 34,
            "fontWeight": 400,
            "letterSpacing": 0.25,
            "lineHeight": "40px",
          },
          "h5": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 24,
            "fontWeight": 400,
            "lineHeight": "28px",
          },
          "h6": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "fontWeight": 500,
            "letterSpacing": 0.25,
            "lineHeight": "24px",
          },
          "largeText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "overline": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 500,
            "letterSpacing": 2,
            "lineHeight": "16px",
            "textTransform": "uppercase",
          },
          "smallText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
          "subtitle": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 0.09,
            "lineHeight": "24px",
          },
          "subtitle1": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0.15,
            "lineHeight": "24px",
          },
        },
        "utils": Object {
          "scrollbar": Object {
            "&::-webkit-scrollbar": Object {
              "height": 17,
              "width": 17,
            },
            "&::-webkit-scrollbar-thumb": Object {
              "background": "#dfe2e5",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
            "&::-webkit-scrollbar-thumb:window-inactive": Object {
              "background": "#dfe2e5",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi__"
      generateId={[Function]}
      jss={
        Jss {
          "generateId": [Function],
          "id": 3,
          "options": Object {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "id": Object {
              "minify": false,
            },
            "plugins": Array [],
          },
          "plugins": PluginsRegistry {
            "plugins": Object {
              "external": Array [
                Object {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onProcessRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": Array [
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": Object {
              "onChangeValue": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": Array [],
              "onProcessStyle": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": Array [
                [Function],
              ],
            },
          },
          "version": "10.3.0",
        }
      }
    >
      <RadioGroup
        isReadOnly={true}
        label="Lorem ipsum"
        labelMode="horizontal"
        onChange={[Function]}
        options={
          Array [
            Object {
              "label": "Lorem ipsum",
              "value": "lorem",
            },
            Object {
              "label": "Lorem ipsum 2",
              "value": "lorem2",
            },
            Object {
              "label": "Lorem ipsum 3",
              "value": "lorem3",
            },
          ]
        }
        overrides={Object {}}
        value={null}
      >
        <div
          className="HoiPoi__RadioGroup__root-3-0 HoiPoi__RadioGroup__isReadOnly-3-6 HoiPoi__RadioGroup__horizontal-3-8"
        >
          <Label
            className="HoiPoi__RadioGroup__Label-3-1"
          >
            <span
              className="HoiPoi__Label__root-3-9 HoiPoi__RadioGroup__Label-3-1"
            >
              <Text
                className="HoiPoi__Label__Text-3-10"
                overrides={Object {}}
              >
                <span
                  className="HoiPoi__Text__root-3-13 HoiPoi__Label__Text-3-10"
                  style={Object {}}
                >
                  Lorem ipsum
                </span>
              </Text>
            </span>
          </Label>
          <div
            className="HoiPoi__RadioGroup__formControl-3-2"
          >
            <RadioControl
              isReadOnly={true}
              key="lorem"
              onChange={[Function]}
              option={
                Object {
                  "label": "Lorem ipsum",
                  "value": "lorem",
                }
              }
              overrides={Object {}}
              value={null}
            >
              <div
                className="HoiPoi__RadioControl__radioControl-3-21"
              >
                <Radio
                  checked={false}
                  isDisabled={true}
                  onChange={[Function]}
                  overrides={Object {}}
                >
                  <div
                    className="HoiPoi__Radio__root-3-26 HoiPoi__Radio__disabled-3-28"
                  >
                    <Component>
                      <svg
                        height="18"
                        width="18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g
                          fill="none"
                          fillRule="evenodd"
                          stroke="none"
                          strokeWidth="1"
                        >
                          <circle
                            cx="9"
                            cy="9"
                            fill="#FFFFFF"
                            id="Radio-Background"
                            r="7.5"
                            stroke="#788590"
                          />
                          <rect
                            fill="#FF0000"
                            fillOpacity="0.1"
                            height="18"
                            id="Radio-Bounds"
                            opacity="0"
                            width="18"
                            x="0"
                            y="0"
                          />
                        </g>
                      </svg>
                    </Component>
                    <input
                      checked=""
                      className="HoiPoi__Radio__input-3-27"
                      disabled="disabled"
                      type="radio"
                    />
                  </div>
                </Radio>
                <span
                  className="HoiPoi__RadioControl__radioLabel-3-22"
                >
                  Lorem ipsum
                </span>
              </div>
            </RadioControl>
            <RadioControl
              isReadOnly={true}
              key="lorem2"
              onChange={[Function]}
              option={
                Object {
                  "label": "Lorem ipsum 2",
                  "value": "lorem2",
                }
              }
              overrides={Object {}}
              value={null}
            >
              <div
                className="HoiPoi__RadioControl__radioControl-3-21"
              >
                <Radio
                  checked={false}
                  isDisabled={true}
                  onChange={[Function]}
                  overrides={Object {}}
                >
                  <div
                    className="HoiPoi__Radio__root-3-26 HoiPoi__Radio__disabled-3-28"
                  >
                    <Component>
                      <svg
                        height="18"
                        width="18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g
                          fill="none"
                          fillRule="evenodd"
                          stroke="none"
                          strokeWidth="1"
                        >
                          <circle
                            cx="9"
                            cy="9"
                            fill="#FFFFFF"
                            id="Radio-Background"
                            r="7.5"
                            stroke="#788590"
                          />
                          <rect
                            fill="#FF0000"
                            fillOpacity="0.1"
                            height="18"
                            id="Radio-Bounds"
                            opacity="0"
                            width="18"
                            x="0"
                            y="0"
                          />
                        </g>
                      </svg>
                    </Component>
                    <input
                      checked=""
                      className="HoiPoi__Radio__input-3-27"
                      disabled="disabled"
                      type="radio"
                    />
                  </div>
                </Radio>
                <span
                  className="HoiPoi__RadioControl__radioLabel-3-22"
                >
                  Lorem ipsum 2
                </span>
              </div>
            </RadioControl>
            <RadioControl
              isReadOnly={true}
              key="lorem3"
              onChange={[Function]}
              option={
                Object {
                  "label": "Lorem ipsum 3",
                  "value": "lorem3",
                }
              }
              overrides={Object {}}
              value={null}
            >
              <div
                className="HoiPoi__RadioControl__radioControl-3-21"
              >
                <Radio
                  checked={false}
                  isDisabled={true}
                  onChange={[Function]}
                  overrides={Object {}}
                >
                  <div
                    className="HoiPoi__Radio__root-3-26 HoiPoi__Radio__disabled-3-28"
                  >
                    <Component>
                      <svg
                        height="18"
                        width="18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g
                          fill="none"
                          fillRule="evenodd"
                          stroke="none"
                          strokeWidth="1"
                        >
                          <circle
                            cx="9"
                            cy="9"
                            fill="#FFFFFF"
                            id="Radio-Background"
                            r="7.5"
                            stroke="#788590"
                          />
                          <rect
                            fill="#FF0000"
                            fillOpacity="0.1"
                            height="18"
                            id="Radio-Bounds"
                            opacity="0"
                            width="18"
                            x="0"
                            y="0"
                          />
                        </g>
                      </svg>
                    </Component>
                    <input
                      checked=""
                      className="HoiPoi__Radio__input-3-27"
                      disabled="disabled"
                      type="radio"
                    />
                  </div>
                </Radio>
                <span
                  className="HoiPoi__RadioControl__radioLabel-3-22"
                >
                  Lorem ipsum 3
                </span>
              </div>
            </RadioControl>
          </div>
        </div>
      </RadioGroup>
    </JssProvider>
  </ThemeProvider>
</Component>
`;

exports[`RadioGroup with values match 1`] = `
<Component>
  <ThemeProvider
    theme={
      Object {
        "colors": Object {
          "aqua100": "#e4fafd",
          "aqua200": "#cbf3fc",
          "aqua400": "#98d5f1",
          "aqua500": "#76bde8",
          "aqua600": "#5695c7",
          "aqua700": "#3b71a7",
          "aqua900": "#16386f",
          "black": "#262B34",
          "blackLight": "#5f656b",
          "blackberry": "#2e2d4c",
          "blackberryDark": "#24243C",
          "blue100": "#d3e3fe",
          "blue200": "#a7c5fe",
          "blue400": "#5a89fd",
          "blue500": "#245dfd",
          "blue600": "#1a47d9",
          "blue700": "#1234b6",
          "blue900": "#061879",
          "disabledGrey": "#ced4d9",
          "green": "#86AD20",
          "green100": "#f4fad2",
          "green200": "#e7f6a6",
          "green400": "#aecd50",
          "green500": "#86ad20",
          "green600": "#6e9417",
          "green700": "#237c10",
          "green900": "#345306",
          "greenLight": "#e7f1d5",
          "grey": "#697782",
          "greyLight": "#f0f3f5",
          "greySoft": "#788590",
          "lines": "#dce3eb",
          "link": "#216db3",
          "linkDark": "#174a79",
          "neutral100": "#f9f9fa",
          "neutral200": "#f4f5f6",
          "neutral300": "#e9ecee",
          "neutral400": "#dfe2e5",
          "neutral500": "#d4d8dc",
          "neutral600": "#a9b1b9",
          "neutral700": "#7d8a96",
          "neutral800": "#526373",
          "neutral900": "#273c50",
          "neutralBase": "#ffffff",
          "orange100": "#fff1cc",
          "orange200": "#ffde99",
          "orange400": "#ffb13f",
          "orange500": "#ff8c00",
          "orange600": "#db6e00",
          "orange700": "#b75400",
          "orange900": "#7a2c00",
          "overlay": "rgba(33,33,33,0.55)",
          "placeholders": "#e1e4e7",
          "placeholdersHover": "#d0d4d8",
          "primary": "#FF8C00",
          "primaryDark": "#C87600",
          "primaryLight": "#fef4e6",
          "primarySoft": "#ff9d26",
          "purple": "#AA5B9C",
          "purple100": "#fae3ed",
          "purple200": "#f6c8e1",
          "purple400": "#cc84b8",
          "purple500": "#aa5b9c",
          "purple600": "#92428b",
          "purple700": "#792d7a",
          "purple900": "#441151",
          "purpleLight": "#EEDEEB",
          "red": "#f04540",
          "red100": "#ffe5d5",
          "red200": "#ffc5ac",
          "red400": "#ff7863",
          "red500": "#ff3b30",
          "red600": "#db2328",
          "red700": "#b7182a",
          "red900": "#7a0929",
          "redDark": "#C43833",
          "redLight": "#FAE7E7",
          "redSoft": "#FF544F",
          "secondary": "#00A8Be",
          "secondaryGrey": "#e4eeff",
          "secondaryLight": "#D6EEF2",
          "secondaryOverlay": "rgba(2,168,189,0.10)",
          "secondarySoft": "#AADFE7",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "tableHeader": "#f6f7f9",
          "tableHeaderHover": "#EBECEF",
          "tableHover": "#FAFBFC",
          "text": Object {
            "black": "#3c4248",
            "danger": "white",
            "default": "#697782",
            "green": "#86AD20",
            "greySoft": "#788590",
            "primary": "white",
            "red": "#f04540",
            "secondary": "#00A8Be",
            "white": "#FFFFFF",
            "yellow": "#E9B200",
          },
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "turquoise100": "#c9fbf1",
          "turquoise200": "#95f8ec",
          "turquoise400": "#36d2d8",
          "turquoise500": "#00a8be",
          "turquoise600": "#0083a3",
          "turquoise700": "#006388",
          "turquoise900": "#00335b",
          "white": "#FFFFFF",
          "yellow": "#E9B200",
          "yellow100": "#fdf6cb",
          "yellow200": "#fcec97",
          "yellow400": "#f1cb3c",
          "yellow500": "#e9b200",
          "yellow600": "#c89400",
          "yellow700": "#a77700",
          "yellow900": "#6f4a00",
          "yellowDark": "#BE9100",
          "yellowLight": "#FCF7E5",
        },
        "effects": Object {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "boxShadow24": Object {
            "boxShadow": "0px 18px 40px rgba(39, 60, 80, 0.4)",
          },
          "buttonActive": Object {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": Object {
          "badges": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 10,
            "fontWeight": 400,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "bigText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "letterSpacing": 0.5,
          },
          "body": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 400,
            "letterSpacing": 0.6,
            "lineHeight": "20px",
          },
          "body1": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0.5,
            "lineHeight": "28px",
          },
          "button": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 0.6,
            "lineHeight": "16px",
          },
          "caption": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 400,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "captionMedium": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 500,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "defaultText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "letterSpacing": 0.5,
          },
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSizeBase": 14,
          "fontSizeSmall": 11,
          "h1": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 96,
            "fontWeight": 300,
            "letterSpacing": -1.5,
            "lineHeight": "112px",
          },
          "h2": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 60,
            "fontWeight": 300,
            "letterSpacing": -0.5,
            "lineHeight": "71px",
          },
          "h3": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 48,
            "fontWeight": 400,
            "lineHeight": "57px",
          },
          "h4": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 34,
            "fontWeight": 400,
            "letterSpacing": 0.25,
            "lineHeight": "40px",
          },
          "h5": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 24,
            "fontWeight": 400,
            "lineHeight": "28px",
          },
          "h6": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "fontWeight": 500,
            "letterSpacing": 0.25,
            "lineHeight": "24px",
          },
          "largeText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "overline": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 500,
            "letterSpacing": 2,
            "lineHeight": "16px",
            "textTransform": "uppercase",
          },
          "smallText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
          "subtitle": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 0.09,
            "lineHeight": "24px",
          },
          "subtitle1": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0.15,
            "lineHeight": "24px",
          },
        },
        "utils": Object {
          "scrollbar": Object {
            "&::-webkit-scrollbar": Object {
              "height": 17,
              "width": 17,
            },
            "&::-webkit-scrollbar-thumb": Object {
              "background": "#dfe2e5",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
            "&::-webkit-scrollbar-thumb:window-inactive": Object {
              "background": "#dfe2e5",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi__"
      generateId={[Function]}
      jss={
        Jss {
          "generateId": [Function],
          "id": 3,
          "options": Object {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "id": Object {
              "minify": false,
            },
            "plugins": Array [],
          },
          "plugins": PluginsRegistry {
            "plugins": Object {
              "external": Array [
                Object {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onProcessRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": Array [
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": Object {
              "onChangeValue": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": Array [],
              "onProcessStyle": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": Array [
                [Function],
              ],
            },
          },
          "version": "10.3.0",
        }
      }
    >
      <RadioGroup
        isReadOnly={false}
        label="Lorem ipsum"
        labelMode="horizontal"
        onChange={[Function]}
        options={
          Array [
            Object {
              "label": "Lorem ipsum",
              "value": "lorem",
            },
            Object {
              "label": "Lorem ipsum 2",
              "value": "lorem2",
            },
            Object {
              "label": "Lorem ipsum 3",
              "value": "lorem3",
            },
          ]
        }
        overrides={Object {}}
        value="lorem2"
      >
        <div
          className="HoiPoi__RadioGroup__root-2-0 HoiPoi__RadioGroup__horizontal-2-8"
        >
          <Label
            className="HoiPoi__RadioGroup__Label-2-1"
          >
            <span
              className="HoiPoi__Label__root-2-9 HoiPoi__RadioGroup__Label-2-1"
            >
              <Text
                className="HoiPoi__Label__Text-2-10"
                overrides={Object {}}
              >
                <span
                  className="HoiPoi__Text__root-2-13 HoiPoi__Label__Text-2-10"
                  style={Object {}}
                >
                  Lorem ipsum
                </span>
              </Text>
            </span>
          </Label>
          <div
            className="HoiPoi__RadioGroup__formControl-2-2"
          >
            <RadioControl
              isReadOnly={false}
              key="lorem"
              onChange={[Function]}
              onClick={[Function]}
              option={
                Object {
                  "label": "Lorem ipsum",
                  "value": "lorem",
                }
              }
              overrides={Object {}}
              value="lorem2"
            >
              <div
                className="HoiPoi__RadioControl__radioControl-2-21"
                onClick={[Function]}
              >
                <Radio
                  checked={false}
                  isDisabled={false}
                  onChange={[Function]}
                  overrides={Object {}}
                >
                  <div
                    className="HoiPoi__Radio__root-2-26"
                    onClick={[Function]}
                  >
                    <Component>
                      <svg
                        height="18"
                        width="18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g
                          fill="none"
                          fillRule="evenodd"
                          stroke="none"
                          strokeWidth="1"
                        >
                          <circle
                            cx="9"
                            cy="9"
                            fill="#FFFFFF"
                            id="Radio-Background"
                            r="7.5"
                            stroke="#788590"
                          />
                          <rect
                            fill="#FF0000"
                            fillOpacity="0.1"
                            height="18"
                            id="Radio-Bounds"
                            opacity="0"
                            width="18"
                            x="0"
                            y="0"
                          />
                        </g>
                      </svg>
                    </Component>
                    <input
                      checked=""
                      className="HoiPoi__Radio__input-2-27"
                      disabled=""
                      onChange={[Function]}
                      type="radio"
                    />
                  </div>
                </Radio>
                <span
                  className="HoiPoi__RadioControl__radioLabel-2-22"
                >
                  Lorem ipsum
                </span>
              </div>
            </RadioControl>
            <RadioControl
              isReadOnly={false}
              key="lorem2"
              onChange={[Function]}
              onClick={[Function]}
              option={
                Object {
                  "label": "Lorem ipsum 2",
                  "value": "lorem2",
                }
              }
              overrides={Object {}}
              value="lorem2"
            >
              <div
                className="HoiPoi__RadioControl__radioControl-2-21"
                onClick={[Function]}
              >
                <Radio
                  checked={true}
                  isDisabled={false}
                  onChange={[Function]}
                  overrides={Object {}}
                >
                  <div
                    className="HoiPoi__Radio__root-2-26"
                    onClick={[Function]}
                  >
                    <Component>
                      <svg
                        height="18"
                        width="18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g
                          fill="none"
                          fillRule="evenodd"
                          stroke="none"
                          strokeWidth="1"
                        >
                          <circle
                            cx="9"
                            cy="9"
                            id="Radio-Background"
                            r="7.5"
                            stroke="#00A8Be"
                          />
                          <circle
                            cx="9"
                            cy="9"
                            fill="#00A8Be"
                            id="Radio-Circle"
                            r="4"
                          />
                          <rect
                            fill="#FF0000"
                            fillOpacity="0.1"
                            height="18"
                            id="Radio-Bounds"
                            opacity="0"
                            width="18"
                            x="0"
                            y="0"
                          />
                        </g>
                      </svg>
                    </Component>
                    <input
                      checked="checked"
                      className="HoiPoi__Radio__input-2-27"
                      disabled=""
                      onChange={[Function]}
                      type="radio"
                    />
                  </div>
                </Radio>
                <span
                  className="HoiPoi__RadioControl__radioLabel-2-22"
                >
                  Lorem ipsum 2
                </span>
              </div>
            </RadioControl>
            <RadioControl
              isReadOnly={false}
              key="lorem3"
              onChange={[Function]}
              onClick={[Function]}
              option={
                Object {
                  "label": "Lorem ipsum 3",
                  "value": "lorem3",
                }
              }
              overrides={Object {}}
              value="lorem2"
            >
              <div
                className="HoiPoi__RadioControl__radioControl-2-21"
                onClick={[Function]}
              >
                <Radio
                  checked={false}
                  isDisabled={false}
                  onChange={[Function]}
                  overrides={Object {}}
                >
                  <div
                    className="HoiPoi__Radio__root-2-26"
                    onClick={[Function]}
                  >
                    <Component>
                      <svg
                        height="18"
                        width="18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g
                          fill="none"
                          fillRule="evenodd"
                          stroke="none"
                          strokeWidth="1"
                        >
                          <circle
                            cx="9"
                            cy="9"
                            fill="#FFFFFF"
                            id="Radio-Background"
                            r="7.5"
                            stroke="#788590"
                          />
                          <rect
                            fill="#FF0000"
                            fillOpacity="0.1"
                            height="18"
                            id="Radio-Bounds"
                            opacity="0"
                            width="18"
                            x="0"
                            y="0"
                          />
                        </g>
                      </svg>
                    </Component>
                    <input
                      checked=""
                      className="HoiPoi__Radio__input-2-27"
                      disabled=""
                      onChange={[Function]}
                      type="radio"
                    />
                  </div>
                </Radio>
                <span
                  className="HoiPoi__RadioControl__radioLabel-2-22"
                >
                  Lorem ipsum 3
                </span>
              </div>
            </RadioControl>
          </div>
        </div>
      </RadioGroup>
    </JssProvider>
  </ThemeProvider>
</Component>
`;
